NYS-109: Prevent long first names from creating header overlap when not full screen

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-header-user-menu/nysenate-header-user-menu.scss
@@ -12,9 +12,9 @@ ul.c-login--list {
   margin-top: 0;
   padding-left: 0;
 
-  @include breakpoint($bp-under-md) {
-    &.desktop-mode {
-      margin-left: 20px;
+  .c-header--btn.c-header--btn__primary {
+    span.c-user-menu--shrunk-dashboard-link {
+      display: none;
     }
   }
 
@@ -89,6 +89,21 @@ ul.c-login--list {
   }
 
   &.desktop-mode {
+    @include breakpoint($bp-under-lg2) {
+      .c-header--btn.c-header--btn__primary {
+        span.c-user-menu--full-width-dashboard-link {
+          display: none;
+        }
+        span.c-user-menu--shrunk-dashboard-link {
+          display: inline;
+        }
+      }
+    }
+
+    @include breakpoint($bp-under-md) {
+      margin-left: 20px;
+    }
+
     &:hover, &:focus-within {
       .c-header--btn__primary {
         color: $color-white;
